--- a/server/.env
+++ b/server/.env
@@ -3,6 +3,7 @@ PORT = 5000
 DB = mongodb+srv://anushkaphogat:Joey1605@egurukulcluster.xv68n.mongodb.net/eGurukulCluster?retryWrites=true&w=majority&appName=eGurukulCluster
 
 Activation_Secret = bhbybvyviububi1605
+Forgot_Secret = bjbkjbkjbkj
 
 Password = jnlhsyyosvfdmygx
 
